--- a/src/MSHU.CarWash.Web/index.html
+++ b/src/MSHU.CarWash.Web/index.html
@@ -33,11 +33,11 @@
                     <li ng-class="{ active: isActive('/Reservation') }"><a href="#/Reservation">FOGLALÁSAIM</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
-                    <li ng-hide="userInfo.isAuthenticated" ng-click="login()"><a>BEJELENTKEZÉS</a></li>
+                    <li ng-hide="userInfo.isAuthenticated" ng-click="login()"><a href="">BEJELENTKEZÉS</a></li>
                     <li class="dropdown" ng-show="userInfo.isAuthenticated">
                         <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{userInfo.profile.family_name}} {{userInfo.profile.given_name}}</a>
                         <ul class="dropdown-menu">
-                            <li><a ng-click="logout()">KIJELENTKEZÉS</a></li>
+                            <li><a href="" ng-click="logout()">KIJELENTKEZÉS</a></li>
                         </ul>
                     </li>
                 </ul>
