--- a/src/MSHU.CarWash.Web/index.html
+++ b/src/MSHU.CarWash.Web/index.html
@@ -33,11 +33,10 @@
                     <li ng-class="{ active: isActive('/Reservation') }"><a href="#/Reservation">RESERVATIONS</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
-                    <li ng-hide="userInfo.isAuthenticated" ng-click="login()"><a href="">LOGIN</a></li>
                     <li class="dropdown" ng-show="userInfo.isAuthenticated">
                         <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{userInfo.profile.given_name}} {{userInfo.profile.family_name}}</a>
                         <ul class="dropdown-menu">
-                            <li><a href="" ng-click="logout()">LOGOUT</a></li>
+                            <li><a href="" ng-click="logout()"><i class="fa fa-sign-out" aria-hidden="true"></i>&nbsp;SIGN OUT</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -53,19 +52,14 @@
             </div>
         </div>
     </div>
-    <br /><br />
-    <footer>
-        <div class="navbar navbar-inverse navbar-fixed-bottom" id="footer">
-            <div class="footer-div">
-                <button type="button" class="close pull-right grey" aria-label="Close" onclick="toggler('footer');">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-                <a class="footer-link" href="http://www.microsoft.hu">© 2016 Microsoft</a>&nbsp;|&nbsp;
-                <a class="footer-link" href="http://go.microsoft.com/fwlink/?LinkId=521839">Privacy & Cookies</a>&nbsp;|&nbsp;
-                <a class="footer-link" href="http://www.microsoft.com/en-us/legal/intellectualproperty/copyright/default.aspx">Terms of Use</a>&nbsp;
-            </div>
-        </div>
-    </footer>
+    <div width="100%">
+        <img src="Content/img/WIN14_Chiara_01.png" width="100%" />
+    </div>
+    <div class="footer-div">
+        <a class="footer-link" href="http://www.microsoft.hu">© 2016 Microsoft</a>&nbsp;|&nbsp;
+        <a class="footer-link" href="http://go.microsoft.com/fwlink/?LinkId=521839">Privacy & Cookies</a>&nbsp;|&nbsp;
+        <a class="footer-link" href="http://www.microsoft.com/en-us/legal/intellectualproperty/copyright/default.aspx">Terms of Use</a>&nbsp;
+    </div>
     <script src="scripts/jquery-2.1.4.min.js"></script>
     <script src="scripts/jquery-ui-1.11.4.min.js"></script>
     <script src="scripts/angular.min.js"></script>
