--- a/src/MSHU.CarWash.PWA/ClientApp/public/index.html
+++ b/src/MSHU.CarWash.PWA/ClientApp/public/index.html
@@ -1,9 +1,15 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="theme-color" content="#000000">
+    <meta name="theme-color" content="#80d8ff">
+    <meta name="description" content="This app is intended to help employees working in Graphisoft park (Budapest, Hungary) reserve car washing services." />
+    <meta name="apple-mobile-web-app-title" content="CarWash">
+    <meta name="application-name" content="CarWash">
+    <meta name="msapplication-TileColor" content="#80d8ff">
+    <meta name="msapplication-config" content="%PUBLIC_URL%/browserconfig.xml">
+    <meta name="theme-color" content="#2ecdf9">
     <base href="%PUBLIC_URL%/" />
     <!--
       manifest.json provides metadata used when your web app is added to the
@@ -11,6 +17,12 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+    <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/images/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/images/apple-touch-icon.png">
+    <link rel="mask-icon" href="%PUBLIC_URL%/images/safari-pinned-tab.svg" color="#80d8ff">
+    <link async rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
+    <link async rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -20,8 +32,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>MSHU.CarWash.PWA</title>
-  </head>
+    <title>CarWash</title>
+</head>
   <body>
     <noscript>
       You need to enable JavaScript to run this app.
