Material-UI implementation

--- a/src/MSHU.CarWash.PWA/ClientApp/public/index.html
+++ b/src/MSHU.CarWash.PWA/ClientApp/public/index.html
@@ -21,8 +21,6 @@
     <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/images/favicon-16x16.png">
     <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/images/apple-touch-icon.png">
     <link rel="mask-icon" href="%PUBLIC_URL%/images/safari-pinned-tab.svg" color="#80d8ff">
-    <link async rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
-    <link async rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -34,11 +32,16 @@
     -->
     <title>CarWash</title>
 </head>
-  <body>
+<body>
     <noscript>
-      You need to enable JavaScript to run this app.
+        You need to enable JavaScript to run this app.
+
+        For full functionality of this site it is necessary to enable JavaScript.
+        Here are the <a href="https://www.enable-javascript.com/" target="_blank">instructions how to enable JavaScript in your web browser</a>.
     </noscript>
+
     <div id="root"></div>
+
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
@@ -49,5 +52,7 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-  </body>
+    <link defer rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
+    <link defer rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+</body>
 </html>
