--- a/src/MSHU.CarWash.PWA/ClientApp/public/index.html
+++ b/src/MSHU.CarWash.PWA/ClientApp/public/index.html
@@ -51,7 +51,7 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-    <link defer rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
-    <link defer rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <!--<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">-->
 </body>
 </html>
