--- a/src/MSHU.CarWash.PWA/ClientApp/public/index.html
+++ b/src/MSHU.CarWash.PWA/ClientApp/public/index.html
@@ -1,26 +1,28 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="theme-color" content="#80d8ff">
-    <meta name="description" content="This app is intended to help employees working in Graphisoft park (Budapest, Hungary) reserve car washing services." />
-    <meta name="apple-mobile-web-app-title" content="CarWash">
-    <meta name="application-name" content="CarWash">
-    <meta name="msapplication-TileColor" content="#80d8ff">
-    <meta name="msapplication-config" content="%PUBLIC_URL%/browserconfig.xml">
-    <base href="%PUBLIC_URL%/" />
-    <!--
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="theme-color" content="#80d8ff">
+  <meta name="description" content="This app is intended to help employees working in Graphisoft park (Budapest, Hungary) reserve car washing services."
+  />
+  <meta name="apple-mobile-web-app-title" content="CarWash">
+  <meta name="application-name" content="CarWash">
+  <meta name="msapplication-TileColor" content="#80d8ff">
+  <meta name="msapplication-config" content="%PUBLIC_URL%/browserconfig.xml">
+  <base href="%PUBLIC_URL%/" />
+  <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-    <!--<link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/images/favicon-32x32.png">
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
+  <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+  <!--<link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/images/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/images/favicon-16x16.png">-->
-    <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/images/apple-touch-icon.png">
-    <link rel="mask-icon" href="%PUBLIC_URL%/images/safari-pinned-tab.svg" color="#80d8ff">
-    <!--
+  <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/images/apple-touch-icon.png">
+  <link rel="mask-icon" href="%PUBLIC_URL%/images/safari-pinned-tab.svg" color="#49a7cc">
+  <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
       Only files inside the `public` folder can be referenced from the HTML.
@@ -29,19 +31,19 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>CarWash</title>
+  <title>CarWash</title>
 </head>
+
 <body>
-    <noscript>
-        You need to enable JavaScript to run this app.
+  <noscript>
+    You need to enable JavaScript to run this app. For full functionality of this site it is necessary to enable JavaScript.
+    Here are the <a href="https://www.enable-javascript.com/" target="_blank">instructions how to enable JavaScript in
+      your web browser</a>.
+  </noscript>
 
-        For full functionality of this site it is necessary to enable JavaScript.
-        Here are the <a href="https://www.enable-javascript.com/" target="_blank">instructions how to enable JavaScript in your web browser</a>.
-    </noscript>
+  <div id="root"></div>
 
-    <div id="root"></div>
-
-    <!--
+  <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
 
@@ -51,7 +53,8 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-    <!--<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
+  <!--<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">-->
 </body>
+
 </html>
