--- a/src/MSHU.CarWash.PWA/ClientApp/public/index.html
+++ b/src/MSHU.CarWash.PWA/ClientApp/public/index.html
@@ -20,7 +20,7 @@
   <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
   <!--<link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/images/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/images/favicon-16x16.png">-->
-  <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/images/apple-touch-icon.png">
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/images/apple-touch-icon.png">
   <link rel="mask-icon" href="%PUBLIC_URL%/images/safari-pinned-tab.svg" color="#49a7cc">
   <!--
       Notice the use of %PUBLIC_URL% in the tags above.
