--- a/src/MSHU.CarWash.Bot/wwwroot/default.htm
+++ b/src/MSHU.CarWash.Bot/wwwroot/default.htm
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Basic Bot sample</title>
+    <title>CarWash Bot</title>
     <style>
         body {
             margin: 0px;
@@ -364,60 +364,24 @@
             max-height: 10px;
         }
     </style>
-    <script>
-        document.addEventListener('DOMContentLoaded', function () {
-            loadFrame();
-        });
-        var loadFrame = function () {
-            var iframe = document.createElement('iframe');
-            iframe.setAttribute("id", "iframe");
-            var offLineHTMLContent = "";
-            var frameElement = document.getElementById("how-to-iframe");
-            if (window.navigator.onLine) {
-                iframe.src = 'https://docs.botframework.com/static/abs/pages/f5.htm';
-                iframe.setAttribute("scrolling", "no");
-                iframe.setAttribute("frameborder", "0");
-                iframe.setAttribute("width", "100%");
-                iframe.setAttribute("height", "100%");
-                var frameDiv = document.getElementById("how-to-iframe");
-                frameDiv.appendChild(iframe);
-            } else {
-                frameElement.classList.add("remove-frame-height");
-            }
-        };
-    </script>
 </head>
 
 <body>
     <header class="header">
         <div class="header-inner-container">
             <div class="header-icon" style="display: inline-block"></div>
-            <div class="header-text" style="display: inline-block">Basic Bot</div>
+            <div class="header-text" style="display: inline-block">CarWash Bot</div>
         </div>
     </header>
     <div class="row">
         <div class="column" class="main-content-area">
-            <div class="content-title">Your bot is ready!</div>
+            <div class="content-title">Hi!</div>
             <div class="main-text main-text-p1">
-                You can test your bot in the Bot Framework Emulator<br />
-                by opening the .bot file in the project folder.
+                I can help you reserve car washing services and answer <br />
+                your questions like 'What does interior cleaning cost?'. <br />
+                <a href="https://teams.microsoft.com/l/chat/0/0?users=28:3e58d71d-7fd2-4568-8a02-0f641a3dfbc5">Ping me on Teams!</a>
             </div>
-            <div class="main-text download-the-emulator">
-                <a class="ctaLink" href="https://aka.ms/bot-framework-F5-download-emulator"
-                   target="_blank">Download the Emulator</a>
-            </div>
-            <div class="main-text">
-                Visit <a class="ctaLink" href="https://aka.ms/bot-framework-F5-abs-home" target="_blank">
-                    Azure
-                    Bot Service
-                </a> to register your bot and add it to<br />
-                various channels. The bot's endpoint URL typically looks
-                like this:
-            </div>
-            <div class="endpoint">https://<i>your_bots_hostname</i>/api/messages</div>
         </div>
-        <div class="column how-to-iframe" id="how-to-iframe"></div>
-    </div>
     </div>
     <div class="ms-logo-container">
         <div class="ms-logo"></div>
