--- a/CarWash.PWA/ClientApp/public/index.html
+++ b/CarWash.PWA/ClientApp/public/index.html
@@ -2,21 +2,21 @@
 <html lang="en">
 
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="theme-color" content="#80d8ff">
-  <meta name="description" content="This app is intended to help employees working in Graphisoft park (Budapest, Hungary) reserve car washing services."
-  />
-  <meta name="apple-mobile-web-app-title" content="CarWash">
-  <meta name="application-name" content="CarWash">
-  <meta name="msapplication-TileColor" content="#80d8ff">
-  <meta name="msapplication-config" content="%PUBLIC_URL%/browserconfig.xml">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+  <meta name="theme-color" content="#80d8ff" />
+  <meta name="description" content="This app is intended to help employees working in Graphisoft park (Budapest, Hungary) reserve car washing services." />
+  <meta name="apple-mobile-web-app-title" content="CarWash" />
+  <meta name="application-name" content="CarWash" />
+  <meta name="msapplication-TileColor" content="#80d8ff" />
+  <meta name="msapplication-config" content="%PUBLIC_URL%/browserconfig.xml" />
   <base href="%PUBLIC_URL%/" />
 
-  <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-  <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/images/apple-touch-icon.png">
-  <link rel="mask-icon" href="%PUBLIC_URL%/images/safari-pinned-tab.svg" color="#49a7cc">
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/images/apple-touch-icon.png" />
+  <link rel="mask-icon" href="%PUBLIC_URL%/images/safari-pinned-tab.svg" color="#49a7cc" />
+  <link rel="preconnect" href="https://js.monitor.azure.com" />
 
   <title>CarWash</title>
 </head>
